[tool.poetry]
name = "pavtools"
version = "0.0.1"
description = "Pavtools, python audio and video tools"
authors = ["dunossauro <dunossauro@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
pavaudio = {git = "https://github.com/pavtools/pavaudio", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
pav = "pavtools.cli:app"

[tool.poetry.extras]
audio = ["pavaudio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
